broke region names, added generic test example

--- a/models/marts/tpch/aggregates/aggregates.yml
+++ b/models/marts/tpch/aggregates/aggregates.yml
@@ -6,3 +6,8 @@ models:
       - name: ORDER_MONTH
         tests:
           - unique
+          - not_null
+      - name: GROSS_REVENUE
+        tests:
+          - not_null
+          - greater_than
