--- a/models/marts/tpch/aggregates/aggregates.yml
+++ b/models/marts/tpch/aggregates/aggregates.yml
@@ -3,9 +3,11 @@ version: 2
 models:
   - name: monthly_gross_revenue
     columns:
+      - name: region
+        tests:
+          - not_null
       - name: ORDER_MONTH
         tests:
-          - unique
           - not_null
       - name: GROSS_REVENUE
         tests:
