made some changes

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,6 +5,7 @@ version: '1.0.0'
 
 models:
   tpch:
-    +materialized: view
+    +materialized: table
+    +transient: false
     marts:
       +materialized: table
