--- a/models/tpch/marts/marts.yml
+++ b/models/tpch/marts/marts.yml
@@ -16,3 +16,16 @@ exposures:
 
     depends_on:
       - ref('monthly_gross_revenue')
+
+
+models:
+  - name: monthly_gross_revenue
+    columns:
+      - name: ORDER_MONTH
+        tests:
+          - unique
+          - not_null
+      - name: GROSS_REVENUE
+        tests:
+          - not_null
+          - greater_than
