Feature/summer2022 demo cleanup (#52)
* fixed overlogging in schema gen

* cleaning things

* cleaning

* removed tpch as a term!

* removed dumb tests

* pushing to enable search in github haha

* found the error!

* finished staging layer

* fixed the modeled

* nice and tidy

* wayyyy clean up

* final touches

* added incremental example

* added a metric

Co-authored-by: Randy Pitcher <randy.pitcher@fishtownanalytics.com>

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,10 +1,22 @@
 config-version: 2
 
-name: 'tpch'
+name: 'acme'
 version: '1.0.0'
 
 models:
-  tpch:
+  acme:
     +materialized: view
-    marts:
-      +materialized: table
+
+    retail:
+      +tags: retail
+      marts:
+        +materialized: table
+
+    hello_world:
+      +tags: hello_world
+
+    utils:
+      +tags: utils
+
+
+        
