added tags, done cleaning

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -8,15 +8,21 @@ models:
     +materialized: view
 
     retail:
-      +tags: retail
+      +tags: 
+        - retail
+        - hourly
       marts:
         +materialized: table
 
     hello_world:
-      +tags: hello_world
+      +tags: 
+        - hello_world
+        - daily
 
     utils:
-      +tags: utils
+      +tags: 
+        - utils
+        - daily
 
 
         
