--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,10 +1,10 @@
 config-version: 2
 
-name: 'acme'
-version: '1.0.0'
+name: 'randy_pitcher_workspace'
+version: '2.0.0'
 
 models:
-  acme:
+  randy_pitcher_workspace:
     +materialized: view
 
     retail:
