--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -6,6 +6,7 @@ version: '2.0.0'
 models:
   randy_pitcher_workspace:
     +materialized: view
+    +pre-hook: "{{ governance_check() }}"
 
     retail:
       +tags: 
