removed the iframe that's not working

--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -2,7 +2,8 @@ version: 2
 
 exposures:
   - name: monthly_gross_revenue
-    description: Dashboard showing monthly gross revenue
+    description: Monthly revenue - simple extract of month with a simple sum of revenue. Is this the right way to compute this?
+
     type: dashboard 
     tags: 
       - retail
