--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -2,8 +2,7 @@ version: 2
 
 exposures:
   - name: monthly_gross_revenue
-    description: Monthly revenue - simple extract of month with a simple sum of revenue. Is this the right way to compute this?
-
+    description: Dashboard showing monthly gross revenue
     type: dashboard 
     tags: 
       - retail
