--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -22,7 +22,9 @@ models:
     columns:
       - name: ORDER_MONTH
         tests:
-          - unique
+          - not_null
+      - name: region
+        tests:
           - not_null
       - name: GROSS_REVENUE
         tests:
