--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -34,10 +34,14 @@ metrics:
     label: Number of Customers
     tags: 
       - retail
-    model: ref('dim_customers')
+    model: ref('fct_order_items')
     description: "The number of customers"
 
-    type: count
+    calculation_method: count_distinct
+    expression: customer_key
+
+    timestamp: order_date
+    time_grains: [day, week, month, quarter, year]
 
     dimensions:
       - market_segment
