--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,8 @@
 packages:
   - package: dbt-labs/dbt_utils
-    version: 0.8.6
+    version: 0.9.2
+
+  - package: dbt-labs/metrics
+    version: 1.3.0-rc1
+
+    
