--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -2,7 +2,7 @@ version: 2
 
 exposures:
   - name: monthly_gross_revenue_dashboard
-    label: "📈 Revenue Dashboard! 📈"
+    label: "Revenue Dashboard! 📈"
     description: Monthly revenue - simple extract of month with a simple sum of revenue.
 
     type: dashboard 
@@ -10,7 +10,7 @@ exposures:
     
     owner:
       name: Randy Pitcher ⚡
-      email: zeus@greek_gods.com
+      email: randy@work.com
 
     depends_on:
       - ref('monthly_gross_revenue')
