--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,6 +14,11 @@ models:
         - hourly
       marts:
         +materialized: table
+      uat:
+        +schema: uat__retail
+        +materialized: view
+        +tags:
+          - uat
 
     hello_world:
       +materialized: table
