--- a/packages.yml
+++ b/packages.yml
@@ -5,4 +5,7 @@ packages:
   - package: dbt-labs/metrics
     version: 1.3.0-rc1
 
+  - package: calogica/dbt_expectations
+    version: 0.7.0
+
     
