--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -6,7 +6,7 @@ exposures:
     description: Monthly revenue - simple extract of month with a simple sum of revenue.
 
     type: dashboard 
-    url: http://localhost:13393/dashboard/1-revenue
+    url: http://localhost:13298/dashboard/1-revenue
     
     owner:
       name: Randy Pitcher ⚡
@@ -19,9 +19,11 @@ exposures:
 models:
   - name: monthly_gross_revenue
     columns:
+      - name: region
+        tests:
+          - not_null
       - name: ORDER_MONTH
         tests:
-          - unique
           - not_null
       - name: GROSS_REVENUE
         tests:
