Feature/jan2023 demo upgrade (#105)
* cleanup

* spiffed up the deps

* tidying

* EVERYTHING LOOKS GOOD NOW

* cleaner lineage

* added some interesting behavior out of canada and algeria

* reset the demo

---------

Co-authored-by: Randy <randy.pitcher@fishtownanalytics.com>

--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -1,39 +1,23 @@
 version: 2
 
-exposures:
-  - name: monthly_gross_revenue_dashboard
-    label: "Revenue Dashboard! 📈"
-    description: Monthly revenue - simple extract of month with a simple sum of revenue.
-
-    type: dashboard 
-    url: https://app.hex.tech/dbtlabs_partner/app/4709906b-f581-4c2d-bed9-1ab8a046a9d9/latest
-    
-    owner:
-      name: Randy Pitcher ⚡
-      email: randy@work.com
-
-    depends_on:
-      - ref('monthly_gross_revenue')
-
-
 models:
   - name: monthly_gross_revenue
     columns:
       - name: ORDER_MONTH
         tests:
-          - unique
           - not_null
       - name: GROSS_REVENUE
         tests:
           - not_null
           - greater_than
 
+
 metrics:
   - name:  num_customers
     label: Number of Customers
     tags: 
       - retail
-    model: ref('fct_order_items')
+    model: ref('order_details')
     description: "The number of customers"
 
     calculation_method: count_distinct
@@ -54,3 +38,19 @@ metrics:
       - field: name
         operator: '!='
         value: "''"
+
+
+exposures:
+  - name: monthly_gross_revenue_dashboard
+    label: "Revenue Dashboard! 📈"
+    description: Monthly revenue - simple extract of month with a simple sum of revenue.
+
+    type: dashboard 
+    url: https://app.hex.tech/dbtlabs_partner/app/4709906b-f581-4c2d-bed9-1ab8a046a9d9/latest
+    
+    owner:
+      name: Randy Pitcher ⚡
+      email: randy@work.com
+
+    depends_on:
+      - ref('monthly_gross_revenue')
