added a metric, updated the existing one to actually work (#110)
* added a metric, updated the existing one to actually work

* name -> customer_name in all metrics

* removed filters from metrics

* fixed id of total_revenue metric

* made some important and overdue renaming

---------

Co-authored-by: Randy <randy.pitcher@fishtownanalytics.com>

--- a/models/retail/marts/marts.yml
+++ b/models/retail/marts/marts.yml
@@ -1,24 +1,43 @@
 version: 2
 
 models:
-  - name: monthly_gross_revenue
+  - name: monthly_revenue
     columns:
       - name: ORDER_MONTH
         tests:
           - not_null
-      - name: GROSS_REVENUE
+      - name: TOTAL_REVENUE
         tests:
           - not_null
           - greater_than
 
 
 metrics:
-  - name:  num_customers
-    label: Number of Customers
+  - name:  total_revenue
+    label: Total Revenue
     tags: 
       - retail
     model: ref('order_details')
-    description: "The number of customers"
+    description: "The revenue made from selling goods and services"
+
+    calculation_method: sum
+    expression: gross_revenue
+
+    timestamp: order_date
+    time_grains: [day, week, month, quarter, year]
+
+    dimensions:
+      - market_segment
+      - nation
+      - region
+      - customer_name
+
+  - name:  total_active_customers
+    label: Total Active Customers
+    tags: 
+      - retail
+    model: ref('order_details')
+    description: Sum of unique active customers
 
     calculation_method: count_distinct
     expression: customer_key
@@ -30,20 +49,17 @@ metrics:
       - market_segment
       - nation
       - region
-    
-    filters:
-      - field: account_balance
-        operator: '>'
-        value: '0'
-      - field: name
-        operator: '!='
-        value: "''"
+      - customer_name
 
 
 exposures:
-  - name: monthly_gross_revenue_dashboard
+  - name: revenue_dashboard
     label: "Revenue Dashboard! 📈"
-    description: Monthly revenue - simple extract of month with a simple sum of revenue.
+    description: Total revenue dashboard
+    tags: 
+      - retail
+      - board
+      - csuite
 
     type: dashboard 
     url: https://app.hex.tech/dbtlabs_partner/app/4709906b-f581-4c2d-bed9-1ab8a046a9d9/latest
@@ -53,4 +69,4 @@ exposures:
       email: randy@work.com
 
     depends_on:
-      - ref('monthly_gross_revenue')
+      - ref('monthly_revenue')
