Feature/dbt v1.5 upgrade (#121)
* removed metrics because they're not supported in dbt v1.5

* updated project version to v1.5.0 to match dbt core semantic versioning

* saving sensivite data for another time

---------

Co-authored-by: Randy <randy.pitcher@fishtownanalytics.com>

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 config-version: 2
 
 name: randy_pitcher_workspace
-version: 2023.1.30
+version: 1.5.0
 
 models:
   randy_pitcher_workspace:
@@ -9,6 +9,10 @@ models:
       +tags: hourly
       marts:
         +materialized: table
+      
+      staging:
+        +group: randy_pitcher_workspace__private
+        +access: private
         
 
 
