--- a/packages.yml
+++ b/packages.yml
@@ -1,8 +1,7 @@
 packages:
   - package: dbt-labs/dbt_utils
     version: 1.0.0
-
-  - package: dbt-labs/metrics
-    version: 1.3.2
+  
+  - local: sensitive_data
 
     
