--- a/models/data_quality/bad_logic/support_demand_dashboard.yml
+++ b/models/data_quality/bad_logic/support_demand_dashboard.yml
@@ -1,5 +1,5 @@
 exposures:
-  - name: support_demand_dashboard
+  - name: customer_support_activity_dashboard
     label: "Support Demand 🤖"
     description: Demand for customer support broken down by dimensions important for demand forecasting and business planning
     tags: 
@@ -14,4 +14,4 @@ exposures:
       email: randy@work.com
 
     depends_on:
-      - ref('support_demand')
+      - ref('customer_support_activity')
