--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,6 +5,9 @@ version: 1.5.0
 
 models:
   randy_pitcher_workspace:
+    data_quality:
+      +tags: ['hourly', 'data_quality']
+
     retail:
       +tags: ['hourly', 'retail']
       +group: randy_pitcher_workspace__retail
