tricked the source yml for data quality to use a generator table function

--- a/models/data_quality/data_sources.yml
+++ b/models/data_quality/data_sources.yml
@@ -1,5 +1,6 @@
 sources:
   - name: corporate_data
+    database: table(generator(rowcount => 100000))-- 
     loaded_at_field: current_timestamp
     tags: 
       - data_quality
