--- a/projects/main/packages.yml
+++ b/projects/main/packages.yml
@@ -2,6 +2,6 @@ packages:
   - package: dbt-labs/dbt_utils
     version: 1.0.0
   
-  - local: sensitive_data
+  - local: projects/sensitive_data
 
     
