--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,2 @@
 packages:
-  - package: dbt-labs/dbt_utils
-    version: 1.0.0
-  
-  - local: sensitive_data
-
-    
+  - local: "projects/{{env_var('DBT_PROJECT', 'main')}}"
