changed some stuff

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,7 @@
 name: randy_pitcher_sales_workspace
 version: 1.5.0
 
+profile: default
+
 target-path: 'builds/target'
 packages-install-path: 'builds/dbt_packages'
