--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,47 @@
-name: randy_pitcher_sales_workspace
+name: randy_pitcher_workspace
 version: 1.5.0
 
 target-path: 'builds/target'
 packages-install-path: 'builds/dbt_packages'
+
+
+
+models:
+  randy_pitcher_workspace:
+    data_quality:
+      +tags: ['hourly', 'data_quality']
+
+    retail:
+      +tags: ['hourly', 'retail']
+      +group: randy_pitcher_workspace__retail
+      
+      marts:
+        +materialized: table
+      
+      staging:
+        +access: private
+        
+tests:
+  randy_pitcher_workspace:
+    +severity: warn
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+on-run-end: "{{ drop_ci_schemas(schemas, dry_run=False) }}"
