made retail all tables

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -24,6 +24,7 @@ models:
         +schema: sanitized_sensitive_data
 
     retail:
+      +materialized: table
       +tags: ['hourly', 'retail']
       +group: randy_pitcher_workspace__retail
       
